feat: add basic challenge

--- a/atividades/a4/index.html
+++ b/atividades/a4/index.html
@@ -23,11 +23,17 @@
             <li>
               O desafio dura no máximo 2 minutos.
             </li>
-            <li>O contador inicia assim que você iniciar a digitação.</li>
+            <li>
+              O texto a ser digitado aparecerá assim que você iniciar o desafio.
+            </li>
             <li>
               O contador parará assim que você digitar o texto corretamente.
             </li>
           </ul>
+
+          <button id="challenge-start-button" type="button">
+            Iniciar desafio
+          </button>
         </div>
 
         <div class="content__text">
@@ -37,7 +43,7 @@
 
           <div class="content__text__challenge">
             <p>Digite o texto abaixo:</p>
-            <p id="challenge-text">Esse é um texto de exemplo</p>
+            <p id="challenge-text"><< O texto aparecerá aqui >></p>
           </div>
 
           <textarea
