feat: add challenge levels

--- a/atividades/a4/index.html
+++ b/atividades/a4/index.html
@@ -62,14 +62,12 @@
 
       <section class="challenge" id="challenge-gameplay">
         <div class="wrapper">
-          <div>
-            <p class="challenge__timer bold" id="challenge-timer"></p>
-          </div>
+          <h2>Nível #<span id="challenge-level"></span></h2>
 
-          <div>
-            <p class="challenge__text bold">Digite o texto abaixo:</p>
-            <p class="challenge__text-box" id="challenge-text"></p>
-          </div>
+          <p class="challenge__timer bold" id="challenge-timer"></p>
+
+          <p class="challenge__text bold">Digite o texto abaixo:</p>
+          <p class="challenge__text-box" id="challenge-text"></p>
 
           <textarea
             id="challenge-input"
