feat: add language levels

--- a/atividades/a4/index.html
+++ b/atividades/a4/index.html
@@ -48,6 +48,44 @@
             </li>
           </ul>
 
+          <div class="challenge__language">
+            <p class="challenge__text bold">Escolha um idioma:</p>
+
+            <div class="challenge__language__options">
+              <label class="challenge__language__item">
+                <input
+                  checked="checked"
+                  type="radio"
+                  name="lang"
+                  value="pt-br"
+                />
+                <img
+                  src="assets/pt-br.svg"
+                  width="60"
+                  alt="Imagem arredondada da bandeira do Brasil"
+                />
+              </label>
+
+              <label class="challenge__language__item">
+                <input type="radio" name="lang" value="us" />
+                <img
+                  src="assets/us.svg"
+                  width="60"
+                  alt="Imagem arredondada da bandeira dos Estados Unidos da América"
+                />
+              </label>
+
+              <label class="challenge__language__item">
+                <input type="radio" name="lang" value="es" />
+                <img
+                  src="assets/es.svg"
+                  width="60"
+                  alt="Imagem arredondada da bandeira da Esapnha"
+                />
+              </label>
+            </div>
+          </div>
+
           <div class="challenge__actions">
             <button
               id="challenge-start-button"
