fix: challenge description

--- a/atividades/a4/index.html
+++ b/atividades/a4/index.html
@@ -36,14 +36,14 @@
 
             <li>
               <p class="challenge__text">
-                O texto a ser digitado aparecerá assim que você iniciar o
+                Os textos a serem digitados aparecerão assim que você iniciar o
                 desafio.
               </p>
             </li>
 
             <li>
               <p class="challenge__text">
-                O contador parará assim que você digitar o texto corretamente.
+                O contador parará assim que você digitar o último texto corretamente.
               </p>
             </li>
           </ul>
